package be.ccb_uliege.incd.uniforext_viewer;

/**
 * Non-JavaFX entry point required by jpackage.
 * jpackage needs a main class that does NOT extend javafx.application.Application.
 */
public class Launcher {
    public static void main(String[] args) {
        App.main(args);
    }
}
