package be.ccb_uliege.incd.uniforext_viewer.services.records;

/**
 * Data class for an undated individual.
 */
public record UndatedIndividual(String uri, String label, String type) {
}